Add Google Ads script to api.html

--- a/api.html
+++ b/api.html
@@ -3,6 +3,8 @@
     <head>
         <title>API请求</title>
         <meta charset="utf-8">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9461577395918976"
+     crossorigin="anonymous"></script>
     </head>
     <body>
         <pre id="data"></pre>
